tests/rosetta/out/Java/bitmap-read-a-ppm-file.error
javac: exit status 1
/tmp/BitmapReadAPpmFile.java:44: error: cannot find symbol
    static Bitmap bm = readP3(ppmtxt);
                              ^
  symbol:   variable ppmtxt
  location: class BitmapReadAPpmFile
/tmp/BitmapReadAPpmFile.java:63: error: incompatible types: List<Pixel> cannot be converted to List<List<Pixel>>
        List<List<Pixel>> row = rows.get(y);
                                        ^
/tmp/BitmapReadAPpmFile.java:64: error: incompatible types: Pixel cannot be converted to List<Pixel>
        row.set(x, p);
                   ^
/tmp/BitmapReadAPpmFile.java:65: error: incompatible types: List<List<Pixel>> cannot be converted to List<Pixel>
        rows.set(y, row);
                    ^
/tmp/BitmapReadAPpmFile.java:69: error: incompatible types: Object cannot be converted to Pixel
        return ((List)b.data.get(y)).get(x);
                                        ^
/tmp/BitmapReadAPpmFile.java:76: error: cannot find symbol
            Object ch = substr(s, i, i + 1);
                        ^
  symbol:   method substr(String,int,int)
  location: class BitmapReadAPpmFile
/tmp/BitmapReadAPpmFile.java:94: error: cannot find symbol
            Object ch = substr(s, i, i + 1);
                        ^
  symbol:   method substr(String,int,int)
  location: class BitmapReadAPpmFile
/tmp/BitmapReadAPpmFile.java:119: error: cannot find symbol
        Digit digits = new Digit(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
        ^
  symbol:   class Digit
  location: class BitmapReadAPpmFile
/tmp/BitmapReadAPpmFile.java:119: error: cannot find symbol
        Digit digits = new Digit(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                           ^
  symbol:   class Digit
  location: class BitmapReadAPpmFile
/tmp/BitmapReadAPpmFile.java:134: error: incompatible types: String cannot be converted to List<String>
            List<String> line = lines.get(i);
                                         ^
/tmp/BitmapReadAPpmFile.java:135: error: cannot find symbol
            if (line.size() > 0 && Objects.equals(substr(line, 0, 1), "#")) {
                                                  ^
  symbol:   method substr(List<String>,int,int)
  location: class BitmapReadAPpmFile
/tmp/BitmapReadAPpmFile.java:139: error: incompatible types: List<String> cannot be converted to String
            List<String> parts = splitWS(line);
                                         ^
/tmp/BitmapReadAPpmFile.java:190: error: incompatible types: possible lossy conversion from double to int
                setPx(b, x, y, new Pixel(l, l, l));
                                         ^
/tmp/BitmapReadAPpmFile.java:211: error: cannot find symbol
        int digits = String.valueOf(max).size();
                                        ^
  symbol:   method size()
  location: class String
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
14 errors
